2002-10-22  Richard Williamson  <rjw@apple.com>

        Added stubs from common WebResourceHandleDelegate base
        class.
        
        * Plugins.subproj/WebBaseNetscapePluginStream.h:
        * Plugins.subproj/WebNetscapePluginStream.h:
        * WebCoreSupport.subproj/WebSubresourceClient.h:
        * WebKit.pbproj/project.pbxproj:
        * WebView.subproj/WebBaseResourceHandleDelegate.h: Added.
        * WebView.subproj/WebBaseResourceHandleDelegate.m: Added.
        * WebView.subproj/WebMainResourceClient.h:

2002-10-22  Darin Adler  <darin@apple.com>

	Make the panel position itself above the main window.
	Too bad we can't use a sheet, but this is better than a random position.

        * WebCoreSupport.subproj/WebJavaScriptTextInputPanel.m:
        (-[WebJavaScriptTextInputPanel initWithPrompt:text:]):
	Use the new [NSWindow sizeToFitAndAdjustWindowHeight]
	and [NSControl sizeToFitAndAdjustWindowHeight].

        * Misc.subproj/WebNSControlExtras.h: Added.
        * Misc.subproj/WebNSControlExtras.m: Added.
        * Misc.subproj/WebNSWindowExtras.h: Added.
        * Misc.subproj/WebNSWindowExtras.m: Added.
        * WebKit.pbproj/project.pbxproj: Added above files.

        * English.lproj/StringsNotToBeLocalized.txt: Update.

2002-10-22  Ken Kocienda  <kocienda@apple.com>

        * Misc.subproj/WebKitErrors.h: Add new error code to signify that a location
	change has been interrupted by a change in the URLPolicy governing the load.
        * WebView.subproj/WebMainResourceClient.m:
        (-[WebMainResourceClient handle:willSendRequest:]): Add code to check the URLPolicy
	for the URL in the request that is submitted to us in this delegate method. Send
	a locationChangeDone:forDataSource: message with an error using the newly-defined
	code in cases where the location change should be cancelled.

2002-10-22  Chris Blumenberg  <cblu@apple.com>

	Added protocol headers for new plug-in API.

        * Plugins.subproj/WebPlugin.h: Added.