@@ -1,3 +1,12 @@
+2002-10-22  John Sullivan  <sullivan@apple.com>
+
+	- fixed 3080873 -- Error in console when no bookmark file 
+	found -[WebBookmarkGroup _loadBookmarkGroupGuts]
+
+        * Bookmarks.subproj/WebBookmarkGroup.m:
+        (-[WebBookmarkGroup _loadBookmarkGroupGuts]):
+	removed ERROR that was useful only long ago.
+
 2002-10-22  Richard Williamson  <rjw@apple.com>
 
         Added stubs from common WebResourceHandleDelegate base
